force-app/main/default/objects/Call_Center_DNIS__c/Call_Center_DNIS__c.object-meta.xml
<CustomObject>
    <label>Call Center - DNIS</label>
    <nameField>
        <displayFormat>DNIS-{0000}</displayFormat>
        <label>DNIS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Center - DNIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>