force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_0_Associated_Script__c.field-meta.xml
<CustomField>
    <fullName>Language_0_Associated_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language 0 Associated Script</label>
    <referenceTo>Call_Center_Scripts__c</referenceTo>
    <relationshipLabel>DNIS - Language 0</relationshipLabel>
    <relationshipName>Call_Center_DNIS9</relationshipName>
    <type>Lookup</type>
</CustomField>