force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_1__c.field-meta.xml
<CustomField>
    <fullName>Language_1__c</fullName>
    <label>Language 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Center_Language</valueSetName>
    </valueSet>
</CustomField>