force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_1_Script__c.field-meta.xml
<CustomField>
    <fullName>Language_1_Script__c</fullName>
    <label>Language 1 Script</label>
    <type>TextArea</type>
</CustomField>