force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_2_Associated_Script__c.field-meta.xml
<CustomField>
    <fullName>Language_2_Associated_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language 2 Associated Script</label>
    <referenceTo>Call_Center_Scripts__c</referenceTo>
    <relationshipLabel>DNIS - Language 2</relationshipLabel>
    <relationshipName>Call_Center_DNIS1</relationshipName>
    <type>Lookup</type>
</CustomField>