force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_3_Associated_Script__c.field-meta.xml
<CustomField>
    <fullName>Language_3_Associated_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language 3 Associated Script</label>
    <referenceTo>Call_Center_Scripts__c</referenceTo>
    <relationshipLabel>DNIS - Language 3</relationshipLabel>
    <relationshipName>Call_Center_DNIS2</relationshipName>
    <type>Lookup</type>
</CustomField>