force-app/main/default/objects/Call_Center_DNIS__c/fields/Language_3_Script__c.field-meta.xml
<CustomField>
    <fullName>Language_3_Script__c</fullName>
    <label>Language 3 Script</label>
    <type>TextArea</type>
</CustomField>