force-app/main/default/objects/Call_Center_DNIS__c/fields/Menu_Option__c.field-meta.xml
<CustomField>
    <fullName>Menu_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Option</label>
    <referenceTo>Call_Center_Menu__c</referenceTo>
    <relationshipLabel>Call Center - DNIS</relationshipLabel>
    <relationshipName>Call_Center_DNIS</relationshipName>
    <type>Lookup</type>
</CustomField>