force-app/main/default/objects/Call_Center_DNIS__c/fields/Menu_Repeat__c.field-meta.xml
<CustomField>
    <fullName>Menu_Repeat__c</fullName>
    <label>Menu Repeat</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>