force-app/main/default/objects/Call_Center_DNIS__c/fields/Redirect_Extension__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Extension__c</fullName>
    <label>Redirect Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>