force-app/main/default/objects/Call_Center_DNIS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DNIS_Number__c</columns>
    <columns>DNIS_Priority__c</columns>
    <columns>Welcome_Message__c</columns>
    <columns>Notes__c</columns>
    <columns>Menu_Option__c</columns>
    <columns>Language_0_Associated_Script__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>